# mutil-rpc

./: Cargo.toml  makefile
multi-rpc/: Cargo.toml
multi-rpc/src/: lib.rs
proc-macros/: Cargo.toml
src/: main.rs  team_service.rs  user_expanded.rs  user_service.rs
